--- a/gallery_config.yaml
+++ b/gallery_config.yaml
@@ -1,6 +1,6 @@
 project_name: Mobject Gallery
 repository_url: https://github.com/kolibril13/mobject-gallery
-user_content_version:  0.17.1
+user_content_version:  0.17.1 (Manim)
 description: |
 favicon: icon.png 
 preview_image: https://kolibril13.github.io/mobject-gallery/preview_image.png # prefered resolution 600x315, must be an url
